# py-adventures

./: .gitignore
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/.github/: copilot-instructions.md
backend/core/: config.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
