[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi[all]>=0.116.2", "sqlalchemy>=2.0.43", "uuid>=1.30", "google-generativeai>=0.8.3", "langchain-google-genai>=2.0.4", "langchain-core>=0.3.0"]

[dependency-groups]
dev = ["uvicorn>=0.35.0"]
